[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keithley_controller"
version = "0.1.0"
description = "Contoller for the Keithley 6482 picoammeter"
authors = [{ name = "Joshua Erbe", email = "j.erbe@oregon-physics.com" }]
dependencies = ["pyside6", "qt-material", "pyserial", "pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
run-app = "src.main:run_app"
